--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,19 @@
 {
-  "name": "synytskiy/laravel-kendo-ui",
+  "name": "Basalam/laravel-kendo-ui",
   "description": "Kendo UI package for Laravel",
   "keywords": ["framework", "laravel","package", "kendo ui"],
   "type": "package",
   "license": "MIT",
   "authors": [
     {
-      "name": "Oleksa Synytskiy",
-      "email": "alexsynytskiy@gmail.com"
+      "name": "Ali Shahghale",
+      "email": "info.shahghale@gmail.com"
     }
   ],
   "minimum-stability": "dev",
   "prefer-stable" : true,
   "require": {
-    "php": ">=5.4.0"
+    "php": ">=7.1"
   },
   "autoload": {
     "classmap": [
