--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,11 @@
     "post-update-cmd": [
       "php artisan clear-compiled",
       "php artisan optimize"
-    ]
+    ],
+    "branch-alias": {
+      "dev-master": "1.0-dev"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
   }
 }
