--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
       "php artisan clear-compiled",
       "php artisan optimize"
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
   }
 }
